@@ -1,0 +1,4 @@
+Warning: watch(): $x = 15 at watch.sl:12
+Warning: watch(): $y = 15 at watch.sl:16
+15
+Warning: watch(): $y = 'this is a string' at watch.sl:18
